Quick fix: sitemap updated, visual bugs on tablet and cookies deleted after changing info

--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -154,6 +154,17 @@ my_body {
     font-weight: bold;
     color:black;
 }
+    
+
+@media (min-width: 768px) and (max-width: 992px) {
+    .title_in_navbar{
+        display: block;
+        padding: .5rem 0.5rem .5rem .5rem;
+        font-size: 2vw;
+        font-weight: bold;
+        color:black;
+    }
+}
 
 .title_in_navbar:hover{
     color: black;
@@ -165,12 +176,22 @@ my_body {
     color: black;
 }
 
+@media (min-width: 768px) and (max-width: 992px) {
+    .my_title_navbar_item{
+        font-size: 2vw;
+        color: black;
+    }
+}
+
+
+
 .my_title_navbar_item a {
     color: black;
 }
 .my_title_navbar_item a:hover {
     color: white;
 }
+
 
 #login_first_div {
     padding: 4rem 2rem;
@@ -347,7 +368,7 @@ my_body {
 
 /* No padding for mobile devices */
 @media (max-width: 768px) {
-    .no_padding_phone{
+    .no_padding_tablet_phone{
         padding: 0px;
     }
 }
@@ -368,19 +389,39 @@ my_body {
 }
 
 
+/* Values for the lateral menu when width >=768px and <=992px
+ * (basically big tablets) 
+*/
 .left_list {
     list-style-type: none;
-    padding-left: 1ex;
+    padding-left: 0ex;
 }
 
 .left_list li{
-    margin: 1ex 0 1ex 0;
+    margin: 1ex 1ex 1ex 0;
 }
 
 .left_list a{
     color: #000000;
-    font-size: 1.2em;
+    font-size: 1.8vw;
     display: block;
+}
+
+@media (min-width: 992px) {
+    .left_list {
+        list-style-type: none;
+        padding-left: 1ex;
+    }
+
+    .left_list li{
+        margin: 1ex 0 1ex 0;
+    }
+
+    .left_list a{
+        color: #000000;
+        font-size: 1.2em;
+        display: block;
+    }
 }
 
 .right_body{
@@ -582,7 +623,7 @@ visualizes correctly everywhere else*/
     color:#000000;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 992px) {
     
     .my_navbar_list {
         justify-content: center;
@@ -590,15 +631,37 @@ visualizes correctly everywhere else*/
     
     .my_navbar_list_item {
         float: left;
-        display: block;
-        right: 5%;
-        padding: 0 8px;
+        display: flex;
+        align-items: center;
+        padding: 0 0.5em;
     }
     
     .my_navbar_list_a {
         text-align: center;
-        padding: 16px;
-        font-size: 1.4em;
+        padding: 0.5em;
+        font-size: 1.8vw;
+        color: #000000;
+    }
+
+}
+
+@media (min-width: 992px) {
+    
+    .my_navbar_list {
+        justify-content: center;
+    }
+    
+    .my_navbar_list_item {
+        float: left;
+        display: flex;
+        align-items: center;
+        padding: 0 0.5em;
+    }
+    
+    .my_navbar_list_a {
+        text-align: center;
+        padding: 0.5em;
+        font-size: 1.35em;
         color: #000000;
     }
 
